--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "arrow-parens": ["error", "always"],
     "react/forbid-prop-types": 0,
     "react/jsx-filename-extension": 0,
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "semi": 0
   }
 }
