--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "jsx-control-statements": "^3.2.8",
+    "lodash": "^4.17.4",
     "nanoid": "^1.0.1",
     "prop-types": "^15.6.0",
+    "raven-js": "^3.20.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-helmet": "^5.2.0",
