--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.6.0",
     "raven-js": "^3.20.1",
     "react": "^16.1.1",
+    "react-animate-height": "^0.10.9",
     "react-dom": "^16.1.1",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.6",
